module Webpack Encore

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 
+
     <h1>Bienvenue !</h1>
+
+    <!--<img src="{{ asset('build/logo.png') }}" alt="ACME logo">-->
 
 {% endblock %}
