Les relations bidirectionnelles avec Doctrine

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -11,7 +11,7 @@
         </div>
             <div>
                 {{ showByCategorie.id }}/
-            {{ showByCategorie.summary }}
+            {{ showByCategorie.synopsis }}
             </div>
         <a href="{{ path("program_show", { id: showByCategorie.id }) }}">Voir la fiche</a>
         <br>
