--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -5,14 +5,21 @@
 {% block body %}
 
     <div class="media">
-        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <img class="align-self-start mr-3" src="{{program.poster}}" width="250px" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
-            <p>{{ program.summary }}</p>
+            <h6>Saisons disponibles :
+            {% for season in seasons %}
+                <li>{{ season.number }} ({{ season.year }})
+                <a href='{{ path("program_season_show", { programId: program.id,  seasonId: season.id }) }}'>Voir la saison</a>
+                </li>
+            {% endfor %}
+            </h6>
+            <br>
+            <p>{{ program.synopsis }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
         </div>
     </div>
-
     <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
 
 {% endblock %}
