--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -12,11 +12,11 @@
  {{ season.description }}
     <br>
     <br>
-    <a href="{{ path('program_show', {id: 1}) }}">Retour aux choix des saisons</a>
+    <a href="{{ path('program_show', {id: program.id}) }}">Retour aux choix des saisons</a>
     <br>
     <br>
         {%  for episode in season.episodes %}
-            <li>Saison {{ season.id }} Episode : {{ episode.number }} - {{ episode.title }}</li>
+            <li>Saison {{ season.number }} Episode : {{ episode.number }} - {{ episode.title }}</li>
 
             <a href="{{ path('program_episode_show', {program: program.id,  season: season.id, episode: episode.id}) }}">Voir l'épisode {{ episode.number }}</a>
 
