15 - Symfony : Doctrine relations Many-To-Many

--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -20,6 +20,16 @@
             <p>Catégorie : {{ program.category.name }}</p>
         </div>
     </div>
+    <strong>Acteurs :</strong>
+    <ul>
+        {% for actor in program.actors %}
+            <a href="{{ path("actor_show", { id: actor.id }) }}"><li>{{ actor.name }}</li></a>
+        {% else %}
+            <li>Aucun acteur pour cette série</li>
+        {% endfor %}
+    </ul>
+    <br>
+
     <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
 
 {% endblock %}
