--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -6,7 +6,7 @@
         <a class="nav-item nav-link" id="nav-series-tab" data-toggle="tab" href="/programs" role="tab" aria-controls="nav-profile" aria-selected="false">Explorer les nouvelles séries</a>
         <a class="nav-item nav-link" id="nav-categories-tab" data-toggle="tab" href="/categories" role="tab" aria-controls="nav-profile" aria-selected="false">Choix par catégories</a>
         <a class="nav-item nav-link" id="nav-favoris-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Favoris</a>
-        <a class="nav-item nav-link" id="nav-acteurs-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Acteurs</a>
+        <a class="nav-item nav-link" id="nav-acteurs-tab" data-toggle="tab" href="/actors" role="tab" aria-controls="nav-home" aria-selected="true">Acteurs</a>
         <a class="nav-item nav-link" id="nav-settings-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Settings</a>
         <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Nous Contacter</a>
         </div>
