--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -19,6 +19,8 @@
             <li>Saison {{ season.number }} Episode : {{ episode.number }} - {{ episode.title }}</li>
 
             <a href="{{ path('program_episode_show', {program: program.id,  season: season.id, episode: episode.id}) }}">Voir l'épisode {{ episode.number }}</a>
+        {% else %}
+            Episodes bientôt disponible.
 
         {% endfor %}
 
