--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -15,7 +15,7 @@
             </p>
         </div>
 
-    <a href="{{ path('program_season_show', {program: program.id,  season: season.id}) }}">Retourner à la sélection d'épisodes</a>
+    <a href="{{ path('program_season_show', {slug: program.slug,  season: season.id}) }}">Retourner à la sélection d'épisodes</a>
 
 
 {% endblock %}
