--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -7,6 +7,6 @@
 
     <!--<img src="{{ asset('build/logo.png') }}" alt="ACME logo">-->
 
-    <!--<a href="{{ path('program_show', {id: 4}) }}">Afficher le program 4</a>-->
+    <!--<a href="{{ path('program_show', {slug: 4}) }}">Afficher le program 4</a>-->
 
 {% endblock %}
