--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -14,6 +14,12 @@
         <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Rechercher</button>
     </form>
+    {% if app.user %}
+        {{ app.user.email }}
+        <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+    {% else %}
+        <a href="{{ path('app_login') }}"> Se connecter</a>
+    {% endif %}
 </nav>
 
 
