--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,8 +2,11 @@
 
 {% block body %}
 
-
-    <h1>Bienvenue !</h1>
+    {% if app.user %}
+    <h1>Bienvenue {{ app.user.email }}</h1>
+    {% else %}
+    <h1>Bonjour</h1>
+    {% endif %}
 
     <!--<img src="{{ asset('build/logo.png') }}" alt="ACME logo">-->
 
