--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -32,6 +32,10 @@
     </ul>
     <br>
 
+    {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('program_edit', { 'slug': program.slug} ) }}">Éditer</a>
+    {%endif%}
+    <br>
     <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
 
 {% endblock %}
