--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -17,8 +17,10 @@
     {% if app.user %}
         {{ app.user.email }}
         <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+        <a href="{{ path('app_logout') }}"> Mon compte</a>
     {% else %}
         <a href="{{ path('app_login') }}"> Se connecter</a>
+        ou <a href="{{ path('app_register') }}"> Créer un compte</a>
     {% endif %}
 </nav>
 
