--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,7 @@
         Sign in
     </button>
 </form>
+    <br>
+    <br>
+    <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié</a>
 {% endblock %}
