23 Symfony  Requêtes personnalisées

--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -6,7 +6,7 @@
    Joue un rôle dans :
     {% for program in actor.programs %}
 
-        <a href="{{ path("program_show", { id: program.id }) }}"><li>{{ program.title }}</li></a>
+        <a href="{{ path("program_show", { slug: program.slug }) }}"><li>{{ program.title }}</li></a>
     {% else %}
         Aucune série trouvée.
     {% endfor %}
