--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -2,7 +2,9 @@
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <img src="{{ asset('build/logo.webp') }}" alt="" width="70" height="70" class="d-inline-block align-text-top">
         <a class="nav-item nav-link" id="nav-home-tab" data-toggle="tab" href="/" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+        {% if app.user %}
         <a class="nav-item nav-link" id="nav-programs-tab" data-toggle="tab" href="/user/my-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+        {% endif %}
         <a class="nav-item nav-link" id="nav-series-tab" data-toggle="tab" href="/programs" role="tab" aria-controls="nav-profile" aria-selected="false">Explorer les nouvelles séries</a>
         <a class="nav-item nav-link" id="nav-categories-tab" data-toggle="tab" href="/categories" role="tab" aria-controls="nav-profile" aria-selected="false">Choix par catégories</a>
         <a class="nav-item nav-link" id="nav-favoris-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Favoris</a>
