--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -3,7 +3,13 @@
 {% block title %}All programs{% endblock %}
 
 {% block body %}
-    <h1>Toutes les séries de la table program : </h1>
+    <h1>Toutes les séries : </h1>
+
+    {{ form_start(form) }}
+    {{ form_widget(form.search) }}
+    <button>Search</button>
+    {{ form_end(form) }}
+    <br>
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
