--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -10,10 +10,13 @@
     <button>Search</button>
     {{ form_end(form) }}
     <br>
+    {{ app.session.get('total') }}
+    
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
             <p>{{ program.synopsis }}</p>
+            <img src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }}">
             <a href="{{ path("program_show", { slug: program.slug }) }}">Voir la fiche</a>
             <br>
             <br>
